--- a/references.bib
+++ b/references.bib
@@ -52,6 +52,13 @@
   title = {CARD Act Report: A review of the impact of the CARD Act on the consumer credit card market},
   url = {https://files.consumerfinance.gov/f/201309_cfpb_card-act-report.pdf}
 },
+@report{cfpb2021,
+  author = {CFPB},
+  publisher = {Consumer Financial Protection Bureau},
+  title = {2021 Consumer Credit Card Market Report},
+  year = {2021},
+  url = {https://files.consumerfinance.gov/f/documents/cfpb_consumer-credit-card-market-report_2021.pdf}
+}
 @article{boston2014,
   author = {Jambulapati, Vikram and Stavins, Joanna},
   publisher = {Federal Reserve Bank of Boston},
@@ -264,9 +271,61 @@
   pages = {54–74},
   doi = {10.1016/j.ijforecast.2019.05.001}
 },
-
-Christoph Molnar, Gunnar König, Julia Herbinger, Timo Freiesleben, Susanne Dandl, Christian A. Scholbeck et al.
+@website{Y14,
+  title = {FR Y-14 Information Collection Q&As},
+  author = {US Federal Reserve},
+  year = {2024},
+  month = {Feburary},
+  url = {https://www.federalreserve.gov/publications/fr-y-14-qas/y-14-qas.htm}
+},
+@article{Mann2008,
+  title = {Patterns of Credit Card Use Among Low and Moderate Income Households},
+  author = {Mann, Ronald J.},
+  year = {2008},
+  url = {https://scholarship.law.columbia.edu/faculty_scholarship/1528}
+}, 
+@article{Molnar2022,
+  author = {Molnar, Christoph},
+  title = {The Interpretable Machine Learning Book},
+  year = {2022},
+  url = {https://christophm.github.io/interpretable-ml-book/}
+},
+@article{Liu2003,
+  title = {The Predictive Power of Economic Indicators in Consumer Credit Risk Management},
+  author = {Liu, Jiong and Xu Eleanor, Xiaoqing},
+  journal = {The RMA Journal},
+  year = {2003},
+  month= {September}
+},
+@article{xgboost,
+  title = {XGBoost: A Scalable Tree Boosting System},
+  author = {Tianqi Chen and Carlos Guestrin},
+  journal = {22nd SIGKDD Conference on Knowledge Discovery and Data Mining},
+  year = {2016},
+  url = {https://arxiv.org/abs/1603.02754}
+},
+@article{Gormley,
+  author = {Gormley, T. A., and Matsa, D. A.},
+  year = {2014},
+  title = {Common Errors: How to (and Not to) Control for Unobserved Heterogeneity},
+  journal = {The Review of Financial Studies},
+  volume = {27},
+  number = {2},
+  pages = {617–661},
+  url = {http://www.jstor.org/stable/24465367}
+},
+@article{Desai,
+  author = {Desai, C.A. and Elliehausen, G. and Lawrence, E.C.},
+  title = {On the County-Level Credit Outcome Beta},
+  journal = {Journal of Financial Services Research},
+  year = {2014},
+  volume = {45},
+  pages = {201–218},
+  doi = {10.1007/s10693-012-0157-8}
+}
 
 
 #Hierarchical modeling and analysis for spatial data
 #Data Analysis Using Regression and Multilevel/Hierarchical Models
+#General Pitfalls of Model-Agnostic Interpretation Methods for Machine Learning Models
+#Christoph Molnar, Gunnar König, Julia Herbinger, Timo Freiesleben, Susanne Dandl, Christian A. Scholbeck et al.
